// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gilded Rose should works correctly 1`] = `
Array [
  Object {
    "name": "+5 Dexterity Vest",
    "quality": 20,
    "sellIn": 10,
  },
  Object {
    "name": "Aged Brie",
    "quality": 0,
    "sellIn": 2,
  },
  Object {
    "name": "Elixir of the Mongoose",
    "quality": 7,
    "sellIn": 5,
  },
  Object {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": 0,
  },
  Object {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": -1,
  },
  Object {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 20,
    "sellIn": 15,
  },
  Object {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 49,
    "sellIn": 10,
  },
  Object {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 49,
    "sellIn": 5,
  },
  Object {
    "name": "Conjured Mana Cake",
    "quality": 6,
    "sellIn": 3,
  },
  Object {
    "name": "new item 1",
    "quality": 49,
    "sellIn": 1,
  },
  Object {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 20,
    "sellIn": 1,
  },
  Object {
    "name": "Aged Brie",
    "quality": 20,
    "sellIn": -2,
  },
]
`;

exports[`Gilded Rose should works correctly 2`] = `
Array [
  Object {
    "name": "+5 Dexterity Vest",
    "quality": 19,
    "sellIn": 9,
  },
  Object {
    "name": "Aged Brie",
    "quality": 1,
    "sellIn": 1,
  },
  Object {
    "name": "Elixir of the Mongoose",
    "quality": 6,
    "sellIn": 4,
  },
  Object {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": 0,
  },
  Object {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": -1,
  },
  Object {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 21,
    "sellIn": 14,
  },
  Object {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 50,
    "sellIn": 9,
  },
  Object {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 50,
    "sellIn": 4,
  },
  Object {
    "name": "Conjured Mana Cake",
    "quality": 5,
    "sellIn": 2,
  },
  Object {
    "name": "new item 1",
    "quality": 48,
    "sellIn": 0,
  },
  Object {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 23,
    "sellIn": 0,
  },
  Object {
    "name": "Aged Brie",
    "quality": 22,
    "sellIn": -3,
  },
]
`;

exports[`Gilded Rose should works correctly 3`] = `
Array [
  Object {
    "name": "+5 Dexterity Vest",
    "quality": 18,
    "sellIn": 8,
  },
  Object {
    "name": "Aged Brie",
    "quality": 2,
    "sellIn": 0,
  },
  Object {
    "name": "Elixir of the Mongoose",
    "quality": 5,
    "sellIn": 3,
  },
  Object {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": 0,
  },
  Object {
    "name": "Sulfuras, Hand of Ragnaros",
    "quality": 80,
    "sellIn": -1,
  },
  Object {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 22,
    "sellIn": 13,
  },
  Object {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 50,
    "sellIn": 8,
  },
  Object {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 50,
    "sellIn": 3,
  },
  Object {
    "name": "Conjured Mana Cake",
    "quality": 4,
    "sellIn": 1,
  },
  Object {
    "name": "new item 1",
    "quality": 46,
    "sellIn": -1,
  },
  Object {
    "name": "Backstage passes to a TAFKAL80ETC concert",
    "quality": 0,
    "sellIn": -1,
  },
  Object {
    "name": "Aged Brie",
    "quality": 24,
    "sellIn": -4,
  },
]
`;
